# songpress

./: .gitignore  ProjectHome.md  README.md  README_SETUP_BUILD.txt  README_TRANSLATE.md  ReadMe_German.md  ReadMe_Italian.md  create_installer.py  debmessage.cpp  global.cpp  i18n.md  inputpanel.cpp  inputpanel.h  license.txt  license.txt.tpl  mkdocs.yml  pannelloprincipale.cpp  pygettext.py  pynsis.py  pyproject.toml  requirements.txt  songdrawer.cpp  songdrawer.h  songparser.cpp  songpress manual-it.w2h  songpress manual.w2h  songpress.cbp  songpress.ci  songpress.g2e  songpress.nsi  songpressApp.cpp  songpressApp.h  songpressMain.cpp  songpressMain.h  stringparser.cpp  stringparser.h  tela.cpp  tela.h  tx.py
.github/workflows/: docs.yml
branches/1.0/: songpress.ci  songpress.g2e
branches/1.1/: songpress.g2e
branches/1.3/: songpress manual.w2h  songpress.g2e  web2help-license.txt
branches/1.4/: license.txt  pygettext.py  songpress manual-it.w2h
docs/: contribute.it.md  contribute.md  history.it.md  history.md  index.it.md  index.md  license.it.md  license.md  screenshots.it.md  screenshots.md
docs/manual/: chord_simplification.it.md  chord_simplification.md  chordpro.it.md  chordpro.md  example.it.md  example.md  exporting.it.md  exporting.md  format_conversion.it.md  format_conversion.md  getting_started.it.md  getting_started.md  quick_editing.it.md  quick_editing.md  transposing.it.md  transposing.md
format/: font.cpp  font.h  inheritedfont.h  inheritedparagraph.cpp  paragraph.cpp
installer/: README_INSTALLER.md  songpress.nsi  songpress.nsi.tpl
python/: Editor.py  PrefTest.py  PreviewCanvas.py  Renderer.py  SDIMainFrame.py  SongBoxes.py  SongDecorator.py  SongFormat.py  Songpress.pnproj  SongpressFrame.py  Tokenizer.py  main.py
src/: CompositePropertyPanel.pot  Editor.py  FontComboBox.py  FontFaceDialog.pot  FontFaceDialog.py  FormatPanel.py  Globals.py  HTML.py  ListDialog.py  MyDecoSlider.py  MyListDialog.py  MyNormalizeDialog.py  MyNotationDialog.py  MyPreferencesDialog.pot  MyPreferencesDialog.py  MySimplePropertyPanel.py  MyTransposeDialog.py  MyUpdateDialog.pot  MyUpdateDialog.py  NormalizeDialog.pot  NormalizeDialog.py  NotationDialog.pot  NotationDialog.py  Pref.py  PrefTest.py  Preferences.pot  Preferences.py  PreferencesDialog.pot  PreferencesDialog.py  PreviewCanvas.pot  PreviewCanvas.py  Renderer.py  SDIMainFrame.pot  SDIMainFrame.py  SimplePropertyPanel.pot  SimplePropertyPanel.py  SongBoxes.py  SongDecorator.py  SongFormat.py  SongTokenizer.py  (+21 more)
trunk/: Skcoda.h  Skvett.h  debmessage.h  global.h  inputpanel.cpp  inputpanel.h  pannelloprincipale.cpp  pannelloprincipale.h  pygettext.py  songdrawer.cpp  songparser.cpp  songparser.h  songpress.cbp  songpress.ci  songpress.g2e  songpressApp.cpp  songpressMain.cpp  songpressMain.h  tela.cpp  textpreferences.cpp  textpreferences.h  web2help-license.txt
web2help/: Grabber.py  MyProperties.py  Project.py  PythonSTC.py  Web2helpFrame.py  web2html.pnproj
wiki/: i18n.wiki
wxsmith/: FinestraPrincipale.wxs  Tela.wxs  inputpanel.wxs
(+557 files in other folders)
