[project]
name = "songpress"
version = "1.9.0rc2"
description = "Songpress is a free, easy to use song typeset program for Windows and Linux, that generates high-quality songbooks."
authors = [
    { name = "Luca Allulli", email = "luca@skeed.it" }
]
license = { text = "GNU GPL v2" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "wxPython>=4.2.4,<5.0.0",
    "requests>=2.32.4,<3.0.0",
    "python-pptx>=1.0.2,<2.0.0",
    "pyshortcuts>=1.9.5,<2.0.0",
]

[project.gui-scripts]
songpress = "songpress.main:main"

[project.urls]
Homepage = "https://www.skeed.it/songpress"
Source = "https://github.com/lallulli/songpress"
Issues = "https://github.com/lallulli/songpress/issues"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "songpress", from = "src" },
]
