[project]
name = "songpress"
version = "1.10.0.dev1"
description = "Songpress is a free, easy to use song typeset program for Windows and Linux, that generates high-quality songbooks."
authors = [
    { name = "Luca Allulli", email = "luca@skeed.it" }
]
license = { text = "GNU GPL v2" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "wxPython>=4.2.5,<5.0.0",
    "requests>=2.32.4,<3.0.0",
    "python-pptx>=1.0.2,<2.0.0",
    "pyshortcuts>=1.9.5,<2.0.0",
]

[project.gui-scripts]
songpress = "songpress.main:main"

[project.urls]
Homepage = "https://www.skeed.it/songpress"
Source = "https://github.com/lallulli/songpress"
Issues = "https://github.com/lallulli/songpress/issues"
#
#[build-system]
#requires = ["poetry-core>=1.8.0"]
#build-backend = "poetry.core.masonry.api"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.poetry]
packages = [
    { include = "songpress", from = "src" },
]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]
preview = ["pixi-build"]

[tool.pixi.package]
name = { workspace = true }
version = { workspace = true }

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.*" }

[tool.pixi.package.host-dependencies]
hatchling = "==1.26.3"

[tool.pixi.package.run-dependencies]
wxpython = ">=4.2.5,<5"
requests = ">=2.32.4,<3.0.0"
python-pptx = ">=1.0.2,<2.0.0"
pyshortcuts = ">=1.9.5,<2.0.0"


